# impl-new-derive

./: Cargo.toml  Readme.md
src/: lib.rs
tests/: impl_new_tests.rs
